Add send absent email

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,11 @@ dependencies {
     compile "com.jakewharton.fliptables:fliptables:1.0.2"
 //    compile "com.beust:jcommander:1.71"
     compile 'info.picocli:picocli:2.0.2'
-
+    compile 'org.mapdb:mapdb:3.0.5'
+// https://mvnrepository.com/artifact/javax.mail/mail
+    compile group: 'javax.mail', name: 'mail', version: '1.4.7'
+    compile 'com.google.api-client:google-api-client:1.23.0'
+    compile 'com.google.android.gms:play-services:11.4.2'
 }
 
 compileKotlin {
