--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
 //    compile 'com.google.api-client:google-api-client:1.23.0'
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-nop
     compile group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.21'
+
+    testCompile("org.junit.jupiter:junit-jupiter-api:5.0.0-M1")
+    testRuntime("org.junit.vintage:junit-vintage-engine:4.12.0-M1")
 }
 
 compileKotlin {
