--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,13 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.github.rholder:gradle-one-jar:1.0.4'
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'gradle-one-jar'
 
 repositories {
     mavenCentral()
@@ -38,9 +40,21 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.21'
 
     testCompile("org.junit.jupiter:junit-jupiter-api:5.0.0-M1")
-    testRuntime("org.junit.vintage:junit-vintage-engine:4.12.0-M1")
+    testCompile("org.junit.vintage:junit-vintage-engine:4.12.0-M1")
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.8.4'
 
+}
+
+jar {
+    baseName = "mira"
+    manifest {
+        attributes 'Main-Class': 'Main'
+    }
+}
+
+task makeJar(type: OneJar) {
+    mainClass = 'Main'
+    archiveName = 'mira.jar'
 }
 
 compileKotlin {
